--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Angela Zhu"
 title_separator          : "-"
 name                     : &name "Angela Zhu"
-description              : &description "Master's student at UMass Amherst interested in Computational Sustainability."
+description              : &description "Master's student at UMass Amherst interested in computational sustainability."
 url                      : https://angelazhu2.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "angelazhu2/angelazhu2.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "me.jpg"
   name             : "Angela Zhu"
   pronouns         : # example: "she/her"  
-  bio              : "Master's student at UMass Amherst interested in Computational Sustainability."
+  bio              : "Master's student at UMass Amherst."
   location         : "Amherst, MA"
   employer         : #"UMass Amherst"
   uri              : # URL
