--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Academic Works"
+  - title: "Publications"
     url: /publications/
 
   # - title: "Talks"
@@ -23,5 +23,5 @@ main:
   # - title: "CV"
   #   url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
