--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "me.jpg"
   name             : "Angela Zhu"
   pronouns         : # example: "she/her"  
-  bio              : "Master's student at UMass Amherst."
+  bio              : "Master's student in CICS at UMass Amherst."
   location         : "Amherst, MA"
   employer         : #"UMass Amherst"
   uri              : # URL
