--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "Academic Works"
     url: /publications/
 
   # - title: "Talks"
@@ -20,8 +20,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  # - title: "CV"
-  #   url: /cv/
+  - title: "CV"
+    url: /files/AngelaZhu_2025_academica_cv.pdf
     
   # - title: "Guide"
   #   url: /markdown/
