updating some text

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Angela Zhu"
   pronouns         : # example: "she/her"  
   bio              : "PhD student at OSU"
-  location         : "Corvallis, MA"
+  location         : "Corvallis, OR"
   employer         : #"UMass Amherst"
   uri              : # URL
   email            : "amzhu22@gmail.com" 
